--- a/.github/workflows/main_care-station.yml
+++ b/.github/workflows/main_care-station.yml
@@ -23,14 +23,14 @@ jobs:
       uses: docker/login-action@v1
       with:
         registry: https://mcr.microsoft.com/
-        username: care-station\$care-station
-        password: Sare159206
+        username: ${{ secrets.AzureAppService_ContainerUsername_626b474fb0914c80a89ea9493bd78143 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_f7386516e78d4f48a97fcaa9f7862677 }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_c7a9cfa2d81e4f7c984b3412094e7479 }}/appsvc/staticsite:${{ github.sha }}
+        tags: mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_626b474fb0914c80a89ea9493bd78143 }}/appsvc/staticsite:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -47,5 +47,5 @@ jobs:
       with:
         app-name: 'care-station'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_1af2e37c3cd2492084b0c0fdfb287a35 }}
-        images: 'mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_c7a9cfa2d81e4f7c984b3412094e7479 }}/appsvc/staticsite:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_2a07e9bb923447d1825aeefd7d648812 }}
+        images: 'mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_626b474fb0914c80a89ea9493bd78143 }}/appsvc/staticsite:${{ github.sha }}'
