--- a/.github/workflows/main_care-station.yml
+++ b/.github/workflows/main_care-station.yml
@@ -11,42 +11,41 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: 'ubuntu-latest'
 
     steps:
-      - uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
 
-      - name: Log in to container registry
-        uses: docker/login-action@v1
-        with:
-          registry: https://mcr.microsoft.com/
-          username: ${{ secrets.AzureAppService_ContainerUsername_6c3750eeac934f8fa139edaff18cb684 }}
-          password: ${{ secrets.AzureAppService_ContainerPassword_2c8da4efd6614f9d8895bad3aeceff42 }}
+    - name: Log in to registry
+      uses: docker/login-action@v1
+      with:
+        registry: https://mcr.microsoft.com/
+        username: ${{ secrets.AzureAppService_ContainerUsername_6c3750eeac934f8fa139edaff18cb684 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_2c8da4efd6614f9d8895bad3aeceff42 }}
 
-      - name: Build and push container image to registry
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_6c3750eeac934f8fa139edaff18cb684 }}/appsvc/staticsite:${{ github.sha }}
-          file: ./Dockerfile
+    - name: Build and push container image to registry
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_6c3750eeac934f8fa139edaff18cb684 }}/appsvc/staticsite:${{ github.sha }}
+        file: ./Dockerfile
 
-    deploy:
-      runs-on: ubuntu-latest
-      needs: build
-      environment:
-        name: 'production'
-        url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
-      steps:
-        - name: Deploy to Azure Web App
-          id: deploy-to-webapp
-          uses: azure/webapps-deploy@v2
-          with:
-            app-name: 'care-station'
-            slot-name: 'production'
-            publish-profile: ${{ secrets.AzureAppService_PublishProfile_d848690d23b74cd2a66cb0feb4402ad3 }}
-            images: 'mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_6c3750eeac934f8fa139edaff18cb684 }}/appsvc/staticsite:${{ github.sha }}'
+    steps:
+    - name: Deploy to Azure Web App
+      id: deploy-to-webapp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'care-station'
+        slot-name: 'production'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_d848690d23b74cd2a66cb0feb4402ad3 }}
+        images: 'mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_6c3750eeac934f8fa139edaff18cb684 }}/appsvc/staticsite:${{ github.sha }}'
